Use getFirst and getLast methods for text list